<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/saveOptionsScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_surface"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_24"
        android:paddingTop="@dimen/space_16"
        android:paddingEnd="@dimen/space_24"
        android:paddingBottom="@dimen/space_8">

        <RadioGroup
            android:id="@+id/rgFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbFormatPng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minHeight="@dimen/touch_target_min"
                android:text="@string/format_png_label" />

            <RadioButton
                android:id="@+id/rbFormatJpeg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/touch_target_min"
                android:text="@string/format_jpeg_label" />

            <RadioButton
                android:id="@+id/rbFormatWebp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/touch_target_min"
                android:text="@string/format_webp_label" />

            <RadioButton
                android:id="@+id/rbFormatSvg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/touch_target_min"
                android:text="@string/format_svg_vector" />

        </RadioGroup>

        <TextView
            android:id="@+id/tvSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/save_size"
            android:textAppearance="@style/TextAppearance.QRCodeSimple.SectionLabel" />

        <RadioGroup
            android:id="@+id/rgSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbSize512"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/touch_target_min"
                android:text="@string/size_512" />

            <RadioButton
                android:id="@+id/rbSize1024"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minHeight="@dimen/touch_target_min"
                android:text="@string/size_1024" />

            <RadioButton
                android:id="@+id/rbSize2048"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/touch_target_min"
                android:text="@string/size_2048" />

        </RadioGroup>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
